Use more rigid system to catch output by installing handlers